--- a/style.css
+++ b/style.css
@@ -40,8 +40,12 @@ h4 {
   font-size: 30px;
 }
 
+form {
+  display: flex;
+}
+
 .search-text {
-  width: 77%;
+  width: 100%;
   padding: 5px;
   border: 1px solid white;
   border-radius: 5px;
@@ -61,7 +65,7 @@ h4 {
   background-color: #9ac4ce;
   border: 0px solid transparent;
   display: inline-block;
-  margin: 0 3px;
+  margin: 0 0 0 4px;
   vertical-align: baseline;
   transition: all 200ms ease-in-out;
 }
